--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Inf Tech Lab</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QPushButton" name="CreateDB_button">
